--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "node-forge": ">=0.10.0",
+    "yargs-parser": ">=13.1.2",
+    "http-proxy": ">=1.18.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
